Chat: prevent "shift-enter" from being treated as a valid message

--- a/client/components/Chat/Chat.css
+++ b/client/components/Chat/Chat.css
@@ -45,7 +45,9 @@
 }
 
 /* cmm = chat messages message */
-.cmm__content, .cmm__content * {
+.cmm__content > .author,
+.cmm__content > .metadata,
+.cmm__content > .text * {
   font-size: 1.14285714rem !important;
 }
 
@@ -54,6 +56,7 @@
 }
 
 .cmm__content .actions {
+  font-size: .875em !important;
   float: right;
   position: relative;
   visibility: hidden;
@@ -124,10 +127,6 @@
   width: 100% !important;
 }
 
-.x_inner {
-  height: calc(100% - 44px) !important;
-}
-
 .inner {
   height: calc(100% - 4.5em) !important;
   display: grid !important;
@@ -139,8 +138,19 @@
     "chat-composer";
 }
 
+.c__minimized {
+  width: inherit !important;
+  /*top: calc(100vh - 45px) !important;*/
+}
+
 /* Mobile */
 @media only screen and (max-width: 767.98px) {
+
+  .resizable {
+    height: 60vh !important;
+    width: 100% !important;
+  }
+
   .cm__container-inner {
     height: 150px;
     overflow-y: scroll;
@@ -148,13 +158,14 @@
   }
 
   .c__container-modal {
+    border: none !important;
     bottom: 0;
-    top: unset !important;
+    box-shadow: unset !important;
+    left: 0 !important;
     margin-bottom: unset !important;
     min-width: unset !important;
-    border: none !important;
-    width: 100% !important;
-    left: 0 !important;
+    top: unset !important;
+    width: 99% ​!important;
   }
 
   .c__container-modal.ui.modal>.close {
@@ -163,6 +174,7 @@
   }
 
   .c__minimized {
+    width: inherit !important;
     /*top: calc(100vh - 45px) !important;*/
   }
 }
@@ -232,6 +244,3 @@
 .c__container-modal .cm__container-outer .ui.large.comments {
   max-width: unset !important;
 }
-
-
-
